package enums;

public enum Actions {
    WORK, EARN, APPEARED, ENOUGH, WALK, SEE, COME, APPEAR, SIT, SITS, TALK, ASK, ANSWER, BOUGHT, DRAGGED,COMES



}
