package interfaces;

public interface AdditionAfter {
    void getAdditionAfter(String addition);
}
