package interfaces;

public interface AdditionBefore {
    void getAdditionBefore(String addition);
}
