package objects;

import enums.Actions;

public abstract class Basic {
    protected String name;

    public Basic(String name) {
        this.name = name;
    }

}
